--- a/_pages/feedback.html
+++ b/_pages/feedback.html
@@ -5,7 +5,14 @@ permalink: /feedback/
 author_profile: true
 ---
 
+<p>
+    Send a message about anything.
+</p>
 
-<form action="http://formspree.io/you@email.com"><input type="email" name="_replyto"><textarea name="body"></textarea><input type="submit"
-                                                                                                                             value="Send">
+<form action="https://formspree.io/yangyicge@gmail.com" method="post">
+    <label for="email">Your email:</label>
+    <input id="email" type="email" name="_replyto">
+    <label for="message">Your message:</label>
+    <textarea id="message" name="body"></textarea>
+    <input type="submit" value="Send">
 </form>
