--- a/_pages/feedback.html
+++ b/_pages/feedback.html
@@ -5,14 +5,23 @@ permalink: /feedback/
 author_profile: true
 ---
 
+<br/>
 <p>
     Send a message about anything.
 </p>
 
-<form action="https://formspree.io/yangyicge@gmail.com" method="post">
-    <label for="email">Your email:</label>
-    <input id="email" type="email" name="_replyto">
-    <label for="message">Your message:</label>
-    <textarea id="message" name="body"></textarea>
-    <input type="submit" value="Send">
+<form
+        action="https://formspree.io/f/xknlpygy"
+        method="POST"
+>
+    <label>
+        Your email:
+        <input type="email" name="email">
+    </label>
+    <label>
+        Your message:
+        <textarea name="message"></textarea>
+    </label>
+    <!-- your other form fields go here -->
+    <button type="submit">Send</button>
 </form>
