--- a/_pages/feedback.html
+++ b/_pages/feedback.html
@@ -5,7 +5,6 @@ permalink: /feedback/
 author_profile: true
 ---
 
-<br/>
 <p>
     Send a message about anything.
 </p>
@@ -16,11 +15,11 @@ author_profile: true
 >
     <label>
         Your email:
-        <input type="email" name="email">
+        <input type="email" name="_replyto">
     </label>
     <label>
         Your message:
-        <textarea name="message"></textarea>
+        <textarea name="message" rows="5"></textarea>
     </label>
     <!-- your other form fields go here -->
     <button type="submit">Send</button>
