--- a/_pages/feedback.html
+++ b/_pages/feedback.html
@@ -14,7 +14,7 @@ author_profile: true
         method="POST"
 >
     <label for="full-name">Full Name</label>
-    <input type="text" name="name" id="full-name" placeholder="First and Last (optional)">
+    <input type="text" name="name" id="full-name" placeholder="optional">
     <label>
         Your email:
         <input type="email" name="email">
