--- a/_pages/feedback.html
+++ b/_pages/feedback.html
@@ -13,7 +13,7 @@ author_profile: true
         action="https://formspree.io/f/xknlpygy"
         method="POST"
 >
-    <label for="full-name">Full Name</label>
+    <label for="full-name">Your Name</label>
     <input type="text" name="name" id="full-name" placeholder="optional">
     <label>
         Your email:
