--- a/_pages/feedback.html
+++ b/_pages/feedback.html
@@ -13,8 +13,8 @@ author_profile: true
         action="https://formspree.io/f/xknlpygy"
         method="POST"
 >
-    <label for="full-name">Your Name</label>
-    <input type="text" name="name" id="full-name" placeholder="optional">
+    <label for="full-name">Your Name (optional)</label>
+    <input type="text" name="name" id="full-name">
     <label>
         Your email:
         <input type="email" name="email">
