--- a/_pages/feedback.html
+++ b/_pages/feedback.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <p>
-    Send a message about anything.
+    Send an (anonymous) message about anything.
 </p>
 
 <form
@@ -16,7 +16,7 @@ author_profile: true
     <label for="full-name">Your name (optional):</label>
     <input type="text" name="name" id="full-name">
     <label>
-        Your email:
+        Your email (optional):
         <input type="email" name="email">
     </label>
     <label>
